--- a/recepcionhotel/recepcion/templates/recepcion/buscar_habitacion.html
+++ b/recepcionhotel/recepcion/templates/recepcion/buscar_habitacion.html
@@ -10,6 +10,8 @@
 
 <a class="nav-link active" href="{%url  'lista_habitaciones' %}"> <b>Volver</b></a>
 
+<title> Buscar Habitacion </title>
+
 <div class="container">
     <div class="row">
       <div class="col">
