--- a/recepcionhotel/recepcion/templates/recepcion/carga_pago.html
+++ b/recepcionhotel/recepcion/templates/recepcion/carga_pago.html
@@ -7,7 +7,7 @@
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
 
-title> Agregar Pago </title>
+<title> Agregar Pago </title>
 
 <a class="nav-link active" href="{%url  'lista_pagos' %}"> <b>Volver</b></a>
 
