--- a/recepcionhotel/recepcion/templates/recepcion/lista_habitaciones.html
+++ b/recepcionhotel/recepcion/templates/recepcion/lista_habitaciones.html
@@ -9,7 +9,7 @@
 
 <title> Habitaciones </title>
 
-<a class="nav-link active" href="{%url  'index' %}"> <b>Volver</b></a>
+<a class="nav-link active" href="{%url  'index' %}"> <b>Volver Home</b></a>
 
 <!-- TABLA/ACCIONES HABITACION--><hr>
 
