--- a/recepcionhotel/recepcion/templates/recepcion/index.html
+++ b/recepcionhotel/recepcion/templates/recepcion/index.html
@@ -11,14 +11,13 @@
 
 <ul class="nav bg-dark fixed">
     <li class="nav-item">
-      <a class="nav-link active" href="{%url  'index' %}"> Recepción Hotel - Volver a Pagina Inico </a>
+      <a class="nav-link active" href="{%url  'index' %}"> Recepción Hotel - Volver a Pagina Inicio </a>
     </li>
   </ul>
   <br><br>
 
   <!-- TABLA/ACCIONES HUESPED-->
  
-  
 
   {% if resultados_busqueda_huespedes %}
 <h1>Resultados de la busqueda</h1>
