--- a/recepcionhotel/recepcion/templates/recepcion/lista_pagos.html
+++ b/recepcionhotel/recepcion/templates/recepcion/lista_pagos.html
@@ -11,6 +11,9 @@
 
 <a class="nav-link active" href="{%url  'index' %}"> <b>Volver Home</b></a>
 
+{% if resultados_busqueda %}
+<h1>Resultados de la busqueda</h1>
+{%endif%}  
 
 <!-- TABLA/ACCIONES TARJETA-->
 <hr>
