buscar Habitacion corregido

--- a/recepcionhotel/recepcion/templates/recepcion/lista_habitaciones.html
+++ b/recepcionhotel/recepcion/templates/recepcion/lista_habitaciones.html
@@ -14,7 +14,7 @@
 <!-- TABLA/ACCIONES HABITACION--><hr>
 
   {% if resultados_busqueda_habitacion %}
-  <h1>Resultados de la búsqueda de habitaciones/h1>
+  <h1>Resultados de la búsqueda de habitaciones</h1>
       {%endif%}
   
   <div class="container">    
