Actualizar huesped funcionando

--- a/recepcionhotel/recepcion/templates/recepcion/index.html
+++ b/recepcionhotel/recepcion/templates/recepcion/index.html
@@ -34,7 +34,7 @@
       <div class="col">
         {% url 'cargar_huesped' as cargar_huesped_url %}
         {% url 'buscar_huesped' as buscar_huesped_url %}
-        {% url 'actualizar_huesped' as actualizar_huesped_url %}
+        {% url 'actualizarhuesped' as actualizar_huesped_url %}
         {% bootstrap_button "Agregar Huesped" button_class="btn-info" button_type="link" href=cargar_huesped_url %}
         {% bootstrap_button "Buscar Huesped" button_class="btn-info" button_type="link" href=buscar_huesped_url %}  
       <div>
