--- a/recepcionhotel/recepcion/templates/recepcion/carga_huesped.html
+++ b/recepcionhotel/recepcion/templates/recepcion/carga_huesped.html
@@ -22,14 +22,12 @@
         
        {% if actualizar_huesped %}
            <form action="{% url  'actualizar_huesped' %}" method="post">
-       {% else %}     
-           <form action="{% url 'cargar_huesped' %}" method="post">
        {% endif %}
  
        {% csrf_token %} 
-       {% bootstrap_form form_huesped %}
+       {% bootstrap_form form %}
      
-       {% if actualizar %}
+       {% if actualizar_huesped %}
          {% bootstrap_button "Actualizar" button_type="submit" button_class="btn-primary" %} 
        {% else %}
          {% bootstrap_button "Guardar" button_type="submit" button_class="btn-primary" %}
