--- a/recepcionhotel/recepcion/templates/recepcion/carga_habitacion.html
+++ b/recepcionhotel/recepcion/templates/recepcion/carga_habitacion.html
@@ -20,19 +20,20 @@
       <div class="row">
       <div class="col">
         
+
        {% if actualizar_habitacion %}
            <form action="{% url 'actualizar_habitacion' %}" method="post">
-       {% else %}     
-           <form action="{% url 'cargar_habitacion'%}" method="post">
+       {% else %}
+           <form action="{%url 'cargar_habitacion'%}" method="post">   
        {% endif %}
  
        {% csrf_token %} 
        {% bootstrap_form form_habitacion %}
      
-       {% if actualizar %}
+       {% if actualizar_habitacion %}
          {% bootstrap_button "Actualizar Habitacion" button_type="submit" button_class="btn-primary" %} 
        {% else %}
-         {% bootstrap_button "Guardar Habitacion" button_type="submit" button_class="btn-primary" %}
+         {% bootstrap_button "Guardar Habitacion" button_type="submit" button_class="btn-success" %}
        {% endif %}
        
        </form>
