--- a/recepcionhotel/recepcion/templates/recepcion/carga_pago.html
+++ b/recepcionhotel/recepcion/templates/recepcion/carga_pago.html
@@ -20,19 +20,19 @@
       <div class="row">
       <div class="col">
         
-       {% if actualizar_pago %}
-           <form action="{% url 'actualizar_pago' %}" method="post">
-       {% else %}     
-           <form action="{% url 'cargar_pago'%}" method="post">
-       {% endif %}
+    {% if actualizar_pago %}
+        <form action="{% url 'actualizar_pago' %}" method="post">
+    {% else %}     
+        <form action="{% url 'cargar_pago'%}" method="post">
+    {% endif %}
  
        {% csrf_token %} 
        {% bootstrap_form form_pago %}
      
-       {% if actualizar %}
+       {% if actualizar_pago %}
          {% bootstrap_button "Actualizar Pago" button_type="submit" button_class="btn-primary" %} 
        {% else %}
-         {% bootstrap_button "Guardar Pago" button_type="submit" button_class="btn-primary" %}
+         {% bootstrap_button "Guardar Pago" button_type="submit" button_class="btn-success" %}
        {% endif %}
        
        
