--- a/recepcionhotel/recepcion/templates/recepcion/index.html
+++ b/recepcionhotel/recepcion/templates/recepcion/index.html
@@ -82,4 +82,8 @@
     </div>
   </div>
 
-  
+  <ul class="nav bg-dark fixed-bottom justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link active" href="{%url  'index' %}"> Recepción Hotel - Sosa / Cannizzo - {% now 'd-m-Y' %}</a>
+    </li>
+  </ul>  
